samples/_failures_safe/1761334299_4362f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4ed017d.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_b4ed017d.c:151:5: error: expected declaration or statement at end of input
  151 |     Token eof_token = {TOKEN_EOF, ""};
      |     ^~~~~
